users routes and rest client
