# routes/users.js
@@ -5,9 +5,9 @@ const usersController = require("../controllers/users");
 
 // Define routes for user-related operations
 router.get("/", usersController.getAllUsers);
-// router.get("/users/:id", usersController.getUserById);
-// router.post("/users", usersController.createUser);
-// router.put("/users/:id", usersController.updateUser);
-// router.delete("/users/:id", usersController.deleteUser);
+router.get("/:id", usersController.getUserById);
+router.post("/", usersController.createUser);
+router.put("/:id", usersController.updateUser);
+router.delete("/:id", usersController.deleteUser);
 
 module.exports = router;
